added all markets summary schema to api document and model function created
